10-07-2005 Qball <Qball@qballcow.nl>
	* configure.ac:			--disable-gnome-vfs will remove the
	gnome-vfs dependency of gmpc.
	* glade/pl3.glade:		Add button-press handler.
	* src/playlist3.c:		Fix right mouse behauviour
	* src/preferences.c:		Fix for bug: 442 
	* glade/gmpc.glade:		Fix for bug: 441
	* glade/gmpc.glade:		esc/ctrl-w now closes the pref window.

10-07-2005 Qball <Qball@qballcow.nl>
	* src/preferences.c:		If tag-browser's are changed, update
	the tree in the playlist.
	* src/playlist3.c:		Moved the tag browser's to a submenu. 
	* src/playlist3.c:		Made a reload function that only
	reloads the items in the tag-browser. (For preferences)
	* glade/gmpc.glade:		Changed location of the id3-browser
	int he pref menu, rename id3-browser to tag-browser.
	* src/playlist3.c:		If scroll to current song enabled, the
	playlist scroll's to the current song when current-playlist is
	selected.

06-07-2005 <Qball> <Qball@qballcow.nl>
	* src/preferences.c:		Made the id3-browser gui working.
	* src/playlist3.c:		Made the id3-browser use the config
	values when building browsers.
	* src/libmpd.h:			Added tag's for use in C++

19-06-2005 <Qball> <Qball@qballcow.nl>
	* src/preferences/trayicon.c:	Removed fading of popup. (for
	stability)
	* src/main.h:			Include "../config.h" -> should fix
	NLS stuff and debug compile flag.
	* configure.ac:			Added AM_GNU_GETTEXT([external])  (Is
	this needed?)
	* src/player.c:			Added a function that replaced '\n'
	for window title to ' - ' (fix for bug 435)

08-06-2005 <Qball> <Qball@qballcow.nl>
	* src/tray-icon.c:		Fixed progress bar on dark themes.

07-06-2005 <Qball> <Qball@qballcow.nl>
	* src/id3info.c:		Fixed bug: 440
	* src/id3info.c:		Fixed bug: 443
	* src/preferences.c:		Possible fix for bug: 442
	

06-06-2005 <Qball> <Qball@qballcow.nl>
	* src/main.c:			Fixed one of my annoyances.. the
	playlist reinitializes when opening preferences menu.

04-06-2005 <Qball> <Qball@qballcow.nl>	