@@ -6,6 +6,9 @@
 	* src/preferences.c:		Fix for bug: 442 
 	* glade/gmpc.glade:		Fix for bug: 441
 	* glade/gmpc.glade:		esc/ctrl-w now closes the pref window.
+	* src/playlist3.c:		Right mouse menu contains
+	"Information" when needed.
+
 
 10-07-2005 Qball <Qball@qballcow.nl>
 	* src/preferences.c:		If tag-browser's are changed, update
